--- a/backend/package.json
+++ b/backend/package.json
@@ -18,6 +18,7 @@
         "joi": "^17.6.0",
         "joi-objectid": "^4.0.2",
         "jsonwebtoken": "^8.5.1",
-        "mongoose": "^6.3.0"
+        "mongoose": "^6.3.0",
+        "request-ip": "^2.1.3"
     }
 }
